PP-12105 data integrity lambda (#16)
* PP-12105 BIN record model, deserialze and valdiate

* PP-12105 data integrity impl

* PP-12105 expand bin record testing, pom opt